--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
   height: auto;
   width: 300px;
   border-radius: 25px;
+  
 }
 
 .service-image{
@@ -10155,7 +10156,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/header-bg.jpg");
+  background-image: url("../assets/img/header-test.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -10459,14 +10460,14 @@ header.masthead .masthead-heading {
   margin-bottom: 0;
 }
 
-section#contact {
+section#conta {
   background-color: #212529;
   background-image: url("../assets/img/map-image.png");
   background-repeat: no-repeat;
   background-position: center;
 }
 section#contact .section-heading {
-  color: #fff;
+  color: black;
 }
 section#contact form#contactForm .form-group {
   margin-bottom: 1.5rem;
