--- a/css/styles.css
+++ b/css/styles.css
@@ -10114,7 +10114,7 @@ img::-moz-selection {
 #mainNav {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: #212529;
+  
 }
 #mainNav .navbar-toggler {
   padding: 0.75rem;
@@ -10150,7 +10150,7 @@ img::-moz-selection {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
     border: none;
-    background-color: transparent;
+    background-color: #1d5d9e;
     transition: padding-top 0.3s ease-in-out, padding-bottom 0.3s ease-in-out;
   }
   #mainNav .navbar-brand {
@@ -10164,7 +10164,7 @@ img::-moz-selection {
   #mainNav.navbar-shrink {
     padding-top: 1rem;
     padding-bottom: 1rem;
-    background-color: #212529;
+    background-color: #1d5d9e;
   }
   #mainNav.navbar-shrink .navbar-brand {
     font-size: 1.25em;
