--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,14 @@
   
 }
 
+.yelp-review{
+  margin: 10px;
+}
+
+.nextdoor-link{
+  color: #00a846 !important;
+}
+
 .mobile-nav{
   background-color: #1d5d9e;
   
